objects/Crypto_Wallet__c.object
<CustomObject>
    <description>Crypto wallet addresses associated with Token Purchasers</description>
    <label>Crypto Wallet</label>
    <nameField>
        <displayFormat>WALLET-{0000}</displayFormat>
        <label>Wallet ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Crypto Wallets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    
    <!-- Relationship to Token Purchaser (Master-Detail: C-4 fix) -->
    <fields>
        <fullName>Token_Purchaser__c</fullName>
        <label>Token Purchaser</label>
        <referenceTo>Token_Purchaser__c</referenceTo>
        <relationshipLabel>Crypto Wallets</relationshipLabel>
        <relationshipName>Crypto_Wallets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <required>true</required>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    
    <!-- Wallet Information -->
    <fields>
        <fullName>Wallet_Address__c</fullName>
        <label>Wallet Address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
        <caseSensitive>true</caseSensitive>
    </fields>
    <fields>
        <fullName>Wallet_Nickname__c</fullName>
        <label>Wallet Nickname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blockchain_Network__c</fullName>
        <label>Blockchain Network</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JIL</fullName>
                    <default>true</default>
                    <label>JIL</label>
                </value>
                <value>
                    <fullName>Ethereum</fullName>
                </value>
                <value>
                    <fullName>Bitcoin</fullName>
                </value>
                <value>
                    <fullName>Solana</fullName>
                </value>
                <value>
                    <fullName>Polygon</fullName>
                </value>
                <value>
                    <fullName>Avalanche</fullName>
                </value>
                <value>
                    <fullName>BNB Chain</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wallet_Type__c</fullName>
        <label>Wallet Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hot Wallet</fullName>
                    <default>true</default>
                    <label>Hot Wallet</label>
                </value>
                <value>
                    <fullName>Cold Wallet</fullName>
                </value>
                <value>
                    <fullName>Hardware Wallet</fullName>
                </value>
                <value>
                    <fullName>Exchange Wallet</fullName>
                </value>
                <value>
                    <fullName>Custodial</fullName>
                </value>
                <value>
                    <fullName>Multi-Sig</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary Wallet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verification_Status__c</fullName>
        <label>Verification Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unverified</fullName>
                    <default>true</default>
                    <label>Unverified</label>
                </value>
                <value>
                    <fullName>Pending Verification</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Flagged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verification_Method__c</fullName>
        <label>Verification Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verification_Date__c</fullName>
        <label>Verification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Added__c</fullName>
        <label>Date Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Transaction_Date__c</fullName>
        <label>Last Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Count__c</fullName>
        <label>Transaction Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>

    <!-- ============================================ -->
    <!-- VALIDATION RULES: Wallet Address Format      -->
    <!-- ============================================ -->

    <!-- Ethereum & EVM-compatible chains: 0x + 40 hex chars (42 total) -->
    <validationRules>
        <fullName>Ethereum_Wallet_Address_Format</fullName>
        <active>true</active>
        <description>Validates that Ethereum, Polygon, Avalanche, BNB Chain, and JIL wallet addresses match the 0x-prefixed hex format (0x followed by exactly 40 hexadecimal characters).</description>
        <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Blockchain_Network__c, "Ethereum"),
        ISPICKVAL(Blockchain_Network__c, "Polygon"),
        ISPICKVAL(Blockchain_Network__c, "Avalanche"),
        ISPICKVAL(Blockchain_Network__c, "BNB Chain"),
        ISPICKVAL(Blockchain_Network__c, "JIL")
    ),
    NOT(REGEX(Wallet_Address__c, "^0x[0-9a-fA-F]{40}$"))
)</errorConditionFormula>
        <errorDisplayField>Wallet_Address__c</errorDisplayField>
        <errorMessage>Wallet address must be a valid EVM address: 0x followed by exactly 40 hexadecimal characters (e.g., 0x1a2B3c4D5e6F...). Please verify the address from your wallet provider.</errorMessage>
    </validationRules>

    <!-- Bitcoin: Legacy (1...), P2SH (3...), or Bech32 (bc1...) formats -->
    <validationRules>
        <fullName>Bitcoin_Wallet_Address_Format</fullName>
        <active>true</active>
        <description>Validates Bitcoin wallet addresses: Legacy (1 + 25-33 base58), P2SH (3 + 25-33 base58), or Bech32/Bech32m (bc1 + 39-59 alphanumeric, no uppercase beyond prefix).</description>
        <errorConditionFormula>AND(
    ISPICKVAL(Blockchain_Network__c, "Bitcoin"),
    NOT(
        OR(
            REGEX(Wallet_Address__c, "^1[1-9A-HJ-NP-Za-km-z]{25,33}$"),
            REGEX(Wallet_Address__c, "^3[1-9A-HJ-NP-Za-km-z]{25,33}$"),
            REGEX(Wallet_Address__c, "^bc1[0-9a-z]{39,59}$")
        )
    )
)</errorConditionFormula>
        <errorDisplayField>Wallet_Address__c</errorDisplayField>
        <errorMessage>Bitcoin address must be a valid format: Legacy (starts with 1), P2SH (starts with 3), or Bech32 (starts with bc1). Please verify the address from your wallet provider.</errorMessage>
    </validationRules>

    <!-- Solana: Base58 encoded, 32-44 characters -->
    <validationRules>
        <fullName>Solana_Wallet_Address_Format</fullName>
        <active>true</active>
        <description>Validates Solana wallet addresses: 32-44 base58 characters (alphanumeric excluding 0, O, I, l).</description>
        <errorConditionFormula>AND(
    ISPICKVAL(Blockchain_Network__c, "Solana"),
    NOT(REGEX(Wallet_Address__c, "^[1-9A-HJ-NP-Za-km-z]{32,44}$"))
)</errorConditionFormula>
        <errorDisplayField>Wallet_Address__c</errorDisplayField>
        <errorMessage>Solana address must be 32-44 base58 characters. Please verify the address from your wallet provider.</errorMessage>
    </validationRules>

</CustomObject>